# ZeroMate-Rosa

include/zero_mate/utils/: logger.hpp
peripherals/: CMakeLists.txt  cgm_config.json  pca9685_mg996r_config.json
peripherals/ads1115_pbmh/: CMakeLists.txt
peripherals/ads1115_pbmh/conf/: ads1115_pbmh_config.json
peripherals/ads1115_pbmh/src/: ads1115_pbmh.cpp  ads1115_pbmh.hpp
peripherals/ads1115_pbmh/tests/: ads1115_pbmh_tests.cpp
peripherals/bq25120a/: CMakeLists.txt
peripherals/bq25120a/conf/: bq25120a_config.json
peripherals/bq25120a/src/: bq25120a.cpp  bq25120a.hpp
peripherals/cgm/: CMakeLists.txt
peripherals/cgm/src/: cgm.cpp  cgm.hpp
peripherals/cgm/src/config/: cgm_config.json
peripherals/cgm/tests/: cgm_tests.cpp
peripherals/ds3231/: CMakeLists.txt  README.md
peripherals/ds3231/conf/: ds3231_config.json
peripherals/ds3231/src/: ds3231.cpp  ds3231.hpp
peripherals/ds3231/tests/: ds3231_tests.cpp
peripherals/hall_effect_sensor/: CMakeLists.txt
peripherals/hall_effect_sensor/src/: hall_effect_sensor.cpp  hall_effect_sensor.hpp
peripherals/logic_analyzer/: README.md
peripherals/max6864/: CMakeLists.txt  README.md
peripherals/max6864/conf/: max6864_config.json
peripherals/max6864/src/: max6864.cpp  max6864.hpp
peripherals/max6864/tests/: max6864_tests.cpp
peripherals/mcp9808/: CMakeLists.txt  README.md
peripherals/mcp9808/conf/: mcp9808_config.json
peripherals/mcp9808/src/: mcp9808.cpp  mcp9808.hpp
peripherals/mcp9808/tests/: mcp9808_tests.cpp
peripherals/pca9685_mg996r/: CMakeLists.txt  README.md
peripherals/pca9685_mg996r/conf/: pca9685_mg996r_config.json
peripherals/pca9685_mg996r/src/: pca9685_mg996r.cpp  pca9685_mg996r.hpp
peripherals/pca9685_mg996r/tests/: pca9685_mg996r_tests.cpp
peripherals/reservoir/: CMakeLists.txt
peripherals/reservoir/src/: reservoir.cpp  reservoir.hpp
peripherals/reservoir/tests/: reservoir_test.cpp
peripherals/ssd1306_oled/src/: ssd1306_oled.cpp
src/: CMakeLists.txt
src/core/: soc.cpp
src/core/arm1176jzf_s/: core.hpp
src/core/coprocessors/: coprocessor.hpp
src/core/coprocessors/cp10/: cp10.cpp
src/core/coprocessors/cp10/isa/: vmrs.cpp
src/core/peripherals/: bsc.cpp  bsc.hpp  gpio.cpp  gpio.hpp  ibsc.hpp  igpio.hpp
src/core/peripherals/auxiliary/: mini_uart.cpp
src/mock/: CMakeLists.txt
src/mock/mock_bsc/: CMakeLists.txt  mock_bsc.cpp  mock_bsc.hpp
src/mock/mock_gpio/: CMakeLists.txt  mock_gpio.cpp  mock_gpio.hpp
