include_guard()

add_subdirectory(led)
#add_subdirectory(button)
add_subdirectory(seven_seg_display)
add_subdirectory(dip_switch)
add_subdirectory(serial_terminal)
add_subdirectory(logic_analyzer)
add_subdirectory(ssd1306_oled)
add_subdirectory(cgm)
add_subdirectory(mcp9808)
#add_subdirectory(a810_bubble_sensor)
add_subdirectory(ads1115_pbmh)
add_subdirectory(reservoir)
add_subdirectory(max6864)
add_subdirectory(pca9685_mg996r)
add_subdirectory(bq25120a)
add_subdirectory(ds3231)